# XPStreamDeck

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  README.md
deploy/XPStreamDeck/profiles/: default.cfg  zibo-738-fkeys.cfg
src/: key_label_renderer.cpp  key_label_renderer.h  plugin_config.h  plugin_utils.h  streamdeck_hid.cpp  streamdeck_hid.h  xpstreamdeck_plugin.cpp
